[gd_scene load_steps=5 format=2]

[ext_resource path="res://levels/main_menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://themes/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://buttons/mute_button/mute_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/main_menu/menu_background.jpg" type="Texture" id=4]

[node name="MainMenu" type="Node"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 4 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.5
margin_top = -100.0
margin_right = 81.5
margin_bottom = 100.0
theme = ExtResource( 2 )

[node name="StartGame" type="Button" parent="Buttons"]
margin_right = 163.0
margin_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 50, 10 )
text = "Jogar"

[node name="Instructions" type="Button" parent="Buttons"]
margin_top = 51.0
margin_right = 163.0
margin_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 50, 10 )
text = "Instruções"

[node name="Credits" type="Button" parent="Buttons"]
margin_top = 102.0
margin_right = 163.0
margin_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 50, 10 )
text = "Créditos"

[node name="HBoxContainer" type="HBoxContainer" parent="Buttons"]
margin_top = 153.0
margin_right = 163.0
margin_bottom = 203.0

[node name="QuitGame" type="Button" parent="Buttons/HBoxContainer"]
margin_right = 109.0
margin_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 50, 10 )
size_flags_horizontal = 3
text = "Sair"

[node name="MuteButton" parent="Buttons/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 113.0
margin_top = 0.0
margin_right = 163.0
margin_bottom = 50.0

[connection signal="button_up" from="Buttons/StartGame" to="." method="_on_StartGame_button_up"]
[connection signal="pressed" from="Buttons/Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="button_up" from="Buttons/HBoxContainer/QuitGame" to="." method="_on_QuitGame_button_up"]
